--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ workflows:
   say-hello-workflow:
     jobs:
       - print_hello
-      - print_world
+      - print_world:
         requires: ['print_hello']
