--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 
 jobs:
-  print_hello:
+  save_hello_world_output:
     docker:
       - image: circleci/node:13.8.0
     environment:
@@ -12,22 +12,28 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Print hello"
-          command: "echo Hello! $NAME - ${CIRCLE_USERNAME}"
+          name: "Print hello world on the file"
+          command: "echo Hello! $NAME - ${CIRCLE_USERNAME} > output.txt"
+      - persist_to_workspace:
+          root: /tmp/workspace
+          paths:
+            - output.txt
 
-  print_world:
+  print_output_file:
     docker:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - attach_workspace:
+          at: /tmp/workspace
       - run:
-          name: "Print World"
-          command: "echo World!"
+          name: "Print File"
+          command: "cat output.txt"
     
 workflows:
-  say-hello-workflow:
+  print_hello_workflow:
     jobs:
-      - print_hello
-      - print_world:
+      - save_hello_world_output
+      - print_output_file:
           requires:
             - print_hello
