--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,4 @@ workflows:
       - save_hello_world_output
       - print_output_file:
           requires:
-            - print_hello
+            - save_hello_world_output
