--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           name: "Print hello world on the file"
           command: "echo Hello! $NAME - ${CIRCLE_USERNAME} > output.txt"
       - persist_to_workspace:
-          root: /tmp/workspace
+          root: /tmp
           paths:
             - output.txt
 
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /tmp/workspace
+          at: /tmp
       - run:
           name: "Print File"
           command: "cat output.txt"
