--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           at: /tmp
       - run:
           name: "Print File"
-          command: "cat output.txt"
+          command: "cat /tmp/output.txt"
     
 workflows:
   print_hello_workflow:
