--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ version: 2.1
 commands:
   print_pipeline_id:
     parameters:
-      to:
-        id: String
+      id:
+        type: String
     steps: 
       run: echo <<parameters.id>>
 
@@ -14,7 +14,7 @@ orbs:
 jobs:
   print_id::
     print_pipeline_id:
-      to: $CIRCLE_WORKFLOW_ID
+      id: $CIRCLE_WORKFLOW_ID
     
 workflows:
   reuse_code:
