--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ commands:
       id:
         type: String
     steps: 
-      run: echo <<parameters.id>>
+      - run: echo <<parameters.id>>
 
 orbs:
   welcome: circleci/welcome-orb@0.4.1
