--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,9 @@ jobs:
   print_id:
     docker:
       - image: circleci/node:13.8.0
-    print_pipeline_id:
-      id: $CIRCLE_WORKFLOW_ID
+    steps:
+      - print_pipeline_id:
+        id: $CIRCLE_WORKFLOW_ID
     
 workflows:
   reuse_code:
