--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ commands:
     parameters:
       id:
         type: string
-        default: "None"
+        default: $CIRCLE_WORKFLOW_ID
     steps: 
       - run: echo <<parameters.id>>
 
@@ -17,8 +17,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-        id: $CIRCLE_WORKFLOW_ID
+      - print_pipeline_id
     
 workflows:
   reuse_code:
