--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ commands:
     parameters:
       id:
         type: string
-        default: $CIRCLE_WORKFLOW_ID
+        default: "None"
     steps: 
       - run: echo <<parameters.id>>
 
@@ -17,7 +17,8 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id
+      - print_pipeline_id:
+          id: $CIRCLE_WORKFLOW_ID
     
 workflows:
   reuse_code:
