--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,13 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-          id: $CIRCLE_WORKFLOW_ID
-    
+      - run: return 1
+  print_fail:
+    run: echo "fail code"
+    when: on_fail
+
 workflows:
   reuse_code:
     jobs:
       - print_id
+      - print_fail
