--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - run: return 1
   print_fail:
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - run: 
         name: Fail text
