--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,24 @@
 version: 2.1
-
-commands:
-  print_pipeline_id:
-    parameters:
-      id:
-        type: string
-        default: "None"
-    steps: 
-      - run: echo <<parameters.id>>
-
+# Use a package of configuration called an orb.
 orbs:
-  welcome: circleci/welcome-orb@0.4.1
+  # Choose either one of the orbs below
+  # welcome: circleci/welcome-orb@0.4.1
+  # aws-cli: circleci/aws-cli@2.0.3
+# Define the jobs we want to run for this project
 
 jobs:
-  print_fail:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: exit 1
-      - run: 
-        name: Fail text
-        commands: echo "fail code"
-        when: on_fail
+  create_infrastructure:  # Choose any name, such as `build`
+      # The primary container, where your job's commands will run
+      docker:
+        - image: 
+      steps:
+        - checkout # check out the code in the project directory
+        name: Create Cloudformation Stack
+        command: aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
 
+# Sequential workflow
 workflows:
-  reuse_code:
+  # Name the workflow
+  deploy_job:
     jobs:
-      - print_fail
+      - create_infrastructure
