--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,9 @@ jobs:
         - image: 
       steps:
         - checkout # check out the code in the project directory
-        name: Create Cloudformation Stack
-        command: aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
+        - run:
+          name: Create Cloudformation Stack
+          command: aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
 
 # Sequential workflow
 workflows:
