--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
   create_infrastructure:  # Choose any name, such as `build`
       # The primary container, where your job's commands will run
       docker:
-        - image: 
+        - image: amazon/aws-cli
       steps:
         - checkout # check out the code in the project directory
         - run:
