--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,19 +7,17 @@ orbs:
 # Define the jobs we want to run for this project
 
 jobs:
-  create_infrastructure:  # Choose any name, such as `build`
-    # The primary container, where your job's commands will run
+  create_infrastructure:
     docker:
       - image: amazon/aws-cli
     steps:
-      - checkout # check out the code in the project directory
+      - checkout
       - run:
-        name: Create Cloudformation Stack
-        command: "aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1"
+        name: Create cloidformation
+        command: |
+          aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
 
-# Sequential workflow
 workflows:
-  # Name the workflow
   deploy_job:
     jobs:
       - create_infrastructure
