--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - name: Create cloidformation
       - run:
-        name: Create cloidformation
         command: |
           aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
 
