--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,21 @@ version: 2.1
 orbs:
   # Choose either one of the orbs below
   # welcome: circleci/welcome-orb@0.4.1
-  # aws-cli: circleci/aws-cli@2.0.3
-# Define the jobs we want to run for this project
+  aws-cli: circleci/aws-cli@2.0.3
 
 jobs:
-  create_infrastructure:
+  create_infrastructure: 
     docker:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - name: Create cloidformation
       - run:
-        command: |
-          aws cloudformation deploy --template-file template.yml --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} --region us-east-1
+          name: Create Cloudformation Stack
+          command: |
+            aws cloudformation deploy \
+              --template-file template.yml \
+              --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+              --region us-east-1
 
 workflows:
   deploy_job:
