--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ version: 2.1
 orbs:
   # Choose either one of the orbs below
   # welcome: circleci/welcome-orb@0.4.1
-  aws-cli: circleci/aws-cli@2.0.3
+  # aws-cli: circleci/aws-cli@2.0.3
+# Define the jobs we want to run for this project
 
 jobs:
   create_infrastructure: 
@@ -19,7 +20,24 @@ jobs:
               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
               --region us-east-1
 
+  configure_infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_key:
+          fingerprints: ["ae:2c:c6:64:6f:6e:83:f1:2d:49:81:13:b7:57:5e:aa"]
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Run playbook and run server
+          command: |
+            ansible-playbook -i inventory.txt template.yml
+
 workflows:
   deploy_job:
     jobs:
       - create_infrastructure
+      - configure_infrastructure
