--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
 
   smoke_test:
     docker:
-      - image: amazon/cli
+      - image: amazon/aws-cli
     steps:
       - run: apk add --update curl
       - run:
